RESOLVED FIXED199914
Fix warning when importing WebKit in Swift
https://bugs.webkit.org/show_bug.cgi?id=199914
Summary Fix warning when importing WebKit in Swift
Alex Christensen
Reported 2019-07-18 13:32:42 PDT
Fix warning when importing WebKit in Swift
Attachments
Patch (1.87 KB, patch)
2019-07-18 13:35 PDT, Alex Christensen
no flags
Patch (2.49 KB, patch)
2019-07-18 15:23 PDT, Alex Christensen
no flags
Patch (1.63 KB, patch)
2019-07-18 18:48 PDT, Alex Christensen
no flags
Patch (1.74 KB, patch)
2019-07-18 18:51 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2019-07-18 13:35:14 PDT
Geoffrey Garen
Comment 2 2019-07-18 13:43:45 PDT
The following build commands failed: CompileC /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64/UnifiedSource18-mm.o /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/DerivedSources/WebKit2/unified-sources/UnifiedSource18-mm.mm normal arm64 objective-c++ com.apple.compilers.llvm.clang.1_0.compiler (1 failure) program finished with exit code 65 elapsedTime=286.745295 CompileC /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64/UnifiedSource18-mm.o /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/DerivedSources/WebKit2/unified-sources/UnifiedSource18-mm.mm normal arm64 objective-c++ com.apple.compilers.llvm.clang.1_0.compiler cd /Volumes/Data/worker/iOS-12-Build-EWS/build/Source/WebKit export LANG=en_US.US-ASCII export PATH="/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/usr/bin:/Applications/Xcode.app/Contents/Developer/usr/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin" /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang -x objective-c++ -arch arm64 -fmessage-length=0 -fdiagnostics-show-note-include-stack -fmacro-backtrace-limit=0 -std=gnu++1z -stdlib=libc++ -fobjc-weak -gmodules -Wno-trigraphs -fno-exceptions -fno-rtti -fno-sanitize=vptr -fpascal-strings -Os -fno-common -Werror -Wno-missing-field-initializers -Wmissing-prototypes -Wunreachable-code -Wno-implicit-atomic-properties -Wno-objc-interface-ivars -Wno-arc-repeated-use-of-weak -Wimplicit-retain-self -Wnon-virtual-dtor -Wno-overloaded-virtual -Wno-exit-time-destructors -Wduplicate-method-match -Wno-missing-braces -Wparentheses -Wswitch -Wunused-function -Wno-unused-label -Wno-unused-parameter -Wunused-variable -Wunused-value -Wempty-body -Wuninitialized -Wno-unknown-pragmas -Wno-shadow -Wno-four-char-constants -Wno-conversion -Wconstant-conversion -Wint-conversion -Wbool-conversion -Wenum-conversion -Wno-float-conversion -Wnon-literal-null-conversion -Wobjc-literal-conversion -Wsign-compare -Wno-shorten-64-to-32 -Wnewline-eof -Wno-selector -Wno-strict-selector-match -Wundeclared-selector -Wdeprecated-implementations -Wno-c++11-extensions -DNDEBUG -DENABLE_3D_TRANSFORMS -DENABLE_APPLE_PAY -DENABLE_APPLE_PAY_SESSION_V3 -DENABLE_APPLE_PAY_SESSION_V4 -DENABLE_APPLICATION_MANIFEST -DENABLE_ATTACHMENT_ELEMENT -DENABLE_AVF_CAPTIONS -DENABLE_CACHE_PARTITIONING -DENABLE_CHANNEL_MESSAGING -DENABLE_CONTENT_FILTERING -DENABLE_CSS_BOX_DECORATION_BREAK -DENABLE_CSS_COMPOSITING -DENABLE_CSS_CONIC_GRADIENTS -DENABLE_CSS_PAINTING_API -DENABLE_CSS_SCROLL_SNAP -DENABLE_CSS_SELECTORS_LEVEL4 -DENABLE_CSS_TRAILING_WORD -DENABLE_CSS_TYPED_OM -DENABLE_CURSOR_VISIBILITY -DENABLE_DARK_MODE_CSS -DENABLE_DATACUE_VALUE -DENABLE_DATALIST_ELEMENT -DENABLE_DATA_INTERACTION -DENABLE_DEVICE_ORIENTATION -DENABLE_DRAG_SUPPORT -DENABLE_ENCRYPTED_MEDIA -DENABLE_EXPERIMENTAL_FEATURES -DENABLE_FILTERS_LEVEL_2 -DENABLE_FTL_JIT -DENABLE_FULLSCREEN_API -DENABLE_GAMEPAD -DENABLE_GEOLOCATION -DENABLE_INDEXED_DATABASE -DENABLE_INDEXED_DATABASE_IN_WORKERS -DENABLE_INPUT_TYPE_COLOR -DENABLE_INPUT_TYPE_DATE -DENABLE_INPUT_TYPE_DATETIMELOCAL -DENABLE_INPUT_TYPE_MONTH -DENABLE_INPUT_TYPE_TIME -DENABLE_INPUT_TYPE_WEEK -DENABLE_INSPECTOR_ALTERNATE_DISPATCHERS -DENABLE_INTERSECTION_OBSERVER -DENABLE_INTL -DENABLE_KEYBOARD_CODE_ATTRIBUTE -DENABLE_KEYBOARD_KEY_ATTRIBUTE -DENABLE_LAYOUT_FORMATTING_CONTEXT -DENABLE_LEGACY_CSS_VENDOR_PREFIXES -DENABLE_LEGACY_CUSTOM_PROTOCOL_MANAGER -DENABLE_LEGACY_ENCRYPTED_MEDIA -DENABLE_LETTERPRESS -DENABLE_MATHML -DENABLE_MEDIA_CAPTURE -DENABLE_MEDIA_CONTROLS_SCRIPT -DENABLE_MEDIA_STREAM -DENABLE_MEMORY_SAMPLER -DENABLE_METER_ELEMENT -DENABLE_NAVIGATOR_STANDALONE -DENABLE_NETWORK_CACHE_SPECULATIVE_REVALIDATION -DENABLE_OVERFLOW_SCROLLING_TOUCH -DENABLE_PAYMENT_REQUEST -DENABLE_PUBLIC_SUFFIX_LIST -DENABLE_REMOTE_INSPECTOR -DENABLE_RESIZE_OBSERVER -DENABLE_RESOURCE_LOAD_STATISTICS -DENABLE_RESOURCE_USAGE -DENABLE_SANDBOX_EXTENSIONS -DENABLE_SERVER_PRECONNECT -DENABLE_SERVICE_WORKER -DENABLE_SHAREABLE_RESOURCE -DENABLE_SPEECH_SYNTHESIS -DENABLE_STREAMS_API -DENABLE_SVG_FONTS -DENABLE_TELEPHONE_NUMBER_DETECTION -DENABLE_TEXT_AUTOSIZING -DENABLE_USERSELECT_ALL -DENABLE_USER_MESSAGE_HANDLERS -DENABLE_VARIATION_FONTS -DENABLE_VIDEO -DENABLE_VIDEO_PRESENTATION_MODE -DENABLE_VIDEO_TRACK -DENABLE_WEBDRIVER_KEYBOARD_INTERACTIONS -DENABLE_WEBDRIVER_TOUCH_INTERACTIONS -DENABLE _WEBGL -DENABLE_WEBGL2 -DENABLE_WEBGPU -DENABLE_WEB_AUDIO -DENABLE_WEB_AUTHN -DENABLE_WEB_CRYPTO -DENABLE_WEB_PROCESS_SANDBOX -DENABLE_WEB_RTC -DENABLE_WIRELESS_PLAYBACK_TARGET -DENABLE_XSLT -DHAVE_CORE_PREDICTION -DU_HIDE_DEPRECATED_API -DU_DISABLE_RENAMING=1 -DU_SHOW_CPLUSPLUS_API=0 -DFRAMEWORK_NAME=WebKit -DOBJC_OLD_DISPATCH_PROTOTYPES=0 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk -fstrict-aliasing -Wprotocol -Wdeprecated-declarations -Winvalid-offsetof -miphoneos-version-min=12.2 -g -fvisibility=hidden -fvisibility-inlines-hidden -fno-threadsafe-statics -Wno-sign-conversion -Winfinite-recursion -Wmove -Wcomma -Wblock-capture-autoreleasing -Wstrict-prototypes -Wrange-loop-analysis -Wno-semicolon-before-method-body -iquote /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/WebKit-generated-files.hmap -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/WebKit-own-target-headers.hmap -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/WebKit-all-target-headers.hmap -iquote /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/WebKit-project-headers.hmap -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/include -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/usr/local/include -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/WebCore.framework/PrivateHeaders/ForwardingHeaders -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/DerivedSources/WebKit2 -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/usr/local/include/WebKitAdditions -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/usr/local/include/WebKitAdditions -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/usr/local/include/webrtc -I/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/usr/local/include/webrtc -I/Volumes/Data/worker/iOS-12-Build-EWS/build/Source/WebKit -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/DerivedSources-normal/arm64 -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/DerivedSources/arm64 -I/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/DerivedSources -Wall -Wextra -Wcast-qual -Wchar-subscripts -Wextra-tokens -Wformat-security -Winit-self -Wmissing-format-attribute -Wmissing-noreturn -Wno-unused-parameter -Wpacked -Wpointer-arith -Wredundant-decls -Wundef -Wwrite-strings -Wexit-time-destructors -Wglobal-constructors -Wtautological-compare -Wimplicit-fallthrough -F/Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos -F/Volumes/Data/worker/iOS-12-Build-EWS/build/Source/WebKit/../../WebKitLibraries/WebKitPrivateFrameworkStubs/iOS/12 -iframework /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/System/Library/PrivateFrameworks -iframework /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/System/Library/Frameworks -iframework /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/System/Library/PrivateFrameworks -isystem /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/System/Library/Frameworks/System.framework/PrivateHeaders -include /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/PrecompiledHeaders/WebKit2Prefix-erbaknglrdwpmpgbqmghqdrrksmd/WebKit2Prefix.h -MMD -MT dependencies -MF /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64/UnifiedSource18-mm.d --serialize-diagnostics /Volumes/Dat a/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64/UnifiedSource18-mm.dia -c /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/DerivedSources/WebKit2/unified-sources/UnifiedSource18-mm.mm -o /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/WebKit.build/Release-iphoneos/WebKit.build/Objects-normal/arm64/UnifiedSource18-mm.o In file included from /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/DerivedSources/WebKit2/unified-sources/UnifiedSource18-mm.mm:6: In file included from /Volumes/Data/worker/iOS-12-Build-EWS/build/Source/WebKit/UIProcess/API/Cocoa/NSAttributedString.mm:28: In file included from /Volumes/Data/worker/iOS-12-Build-EWS/build/Source/WebKit/UIProcess/API/Cocoa/NSAttributedStringPrivate.h:26: /Volumes/Data/worker/iOS-12-Build-EWS/build/Source/WebKit/UIProcess/API/Cocoa/NSAttributedString.h:46:5: error: 'swift_name' attribute has invalid identifier for base name [-Werror,-Wswift-name-attribute] NS_SWIFT_NAME(NSAttributedString.DocumentReadingOptionKey.readAccessURL) WK_API_AVAILABLE(macos(WK_MAC_TBA), ios(WK_IOS_TBA)); ^ In file included from /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/DerivedSources/WebKit2/unified-sources/UnifiedSource18-mm.mm:1: In file included from /Volumes/Data/worker/iOS-12-Build-EWS/build/Source/WebKit/WebKit2Prefix.h:46: In file included from /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/System/Library/Frameworks/Foundation.framework/Headers/Foundation.h:8: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/System/Library/Frameworks/Foundation.framework/Headers/NSObjCRuntime.h:348:30: note: expanded from macro 'NS_SWIFT_NAME' #define NS_SWIFT_NAME(_name) CF_SWIFT_NAME(_name) ^ In file included from /Volumes/Data/worker/iOS-12-Build-EWS/build/WebKitBuild/Release-iphoneos/DerivedSources/WebKit2/unified-sources/UnifiedSource18-mm.mm:1: In file included from /Volumes/Data/worker/iOS-12-Build-EWS/build/Source/WebKit/WebKit2Prefix.h:37: In file included from /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/System/Library/Frameworks/CoreFoundation.framework/Headers/CoreFoundation.h:43: /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.2.sdk/System/Library/Frameworks/CoreFoundation.framework/Headers/CFBase.h:291:57: note: expanded from macro 'CF_SWIFT_NAME' # define CF_SWIFT_NAME(_name) __attribute__((swift_name(#_name))) ^ <scratch space>:68:1: note: expanded from here "NSAttributedString.DocumentReadingOptionKey.readAccessURL" ^ 1 error generated.
Geoffrey Garen
Comment 3 2019-07-18 13:45:37 PDT
Comment on attachment 374409 [details] Patch Patch looks intuitively correct, but EWS disagrees. :(
Alex Christensen
Comment 4 2019-07-18 15:23:36 PDT
Alex Christensen
Comment 5 2019-07-18 18:48:45 PDT
Alex Christensen
Comment 6 2019-07-18 18:51:04 PDT
WebKit Commit Bot
Comment 7 2019-07-18 20:08:34 PDT
Comment on attachment 374435 [details] Patch Clearing flags on attachment: 374435 Committed r247635: <https://trac.webkit.org/changeset/247635>
WebKit Commit Bot
Comment 8 2019-07-18 20:08:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.