Fix warning when importing WebKit in Swift https://bugs.webkit.org/show_bug.cgi?id=199914 <rdar://problem/52854930>

Patch by Alex Christensen <achristensen@webkit.org> on 2019-07-18
Reviewed by Wenson Hsieh.

* UIProcess/API/Cocoa/NSAttributedString.h:
Declare NSAttributedString and update a swift name.
This fix was proposed by Argyrios Kyrtzidis.

Canonical link: https://commits.webkit.org/213803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247635 268f45cc-cd09-0410-ab3c-d52691b4dbfc